2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.
2007-12-26  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt/pt.po: Added Portuguese translation by Bruno Queiros
	<brunomiguelqueiros@sapo.pt>.
	* Makefile.am: Added Portuguese (pt) to DOC_LINGUAS.

2007-08-14  Satoru SATOH <ss@gnome.gr.jp>

	* Makefile.am: Added ja to DOC_LINGUAS.
	* ja/ja.po: Added Japanese translation.

2008-08-03 Jordi Mas <jmas@softcatala.org>

	* Makefile.am: Added ca to DOC_LINGUAS
	* pt_BR/pt_BR.po: Added Catalan translation by Joan Duran

2007-07-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR/pt_BR.po: Fixed header information.

2007-07-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* Makefile.am: Added pt_BR to DOC_LINGUAS
	* pt_BR/pt_BR.po: Added Brazilian Portuguese translation Wendell Silva
	<thluxx@gmail.com>.

2007-06-28  Clytie Siddall <clytie@riverland.net.au>

	* Makefile.am: Add vi to DOC_LINGUAS
	* vi.po: Added Vietnamese translation.

2007-04-23  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2007-03-12  Maxim Dziumanenko <dziumanenko@gmail.com>

	* Makefile.am: Add uk to DOC_LINGUAS
	* uk/uk.po: Updated Ukrainian translation. 

2007-02-16  David Lodge <dave@cirt.net>

	* en_GB/en_GB.po: Added English (British) translation
	* Makefile.am: Added en_GB to DOC_LINGUAS

2007-01-25  AP Singh Alam <aalam@users.sf.net>

	* pa.po: Moved to pa directory
	* Makefile.am: pa is added

2007-01-20  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	
2006-11-19  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	
2006-11-19  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Updated French translation.
	
2006-11-16  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.
	
2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* C/control-center.xml: Fix build.
