@@ -1,117 +1,241 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <sect1 id="config-mouse">
   <title>Mouse</title>
-  <sect2 id="mouse-config-introduction">
+
+  <sect2 id="config-mouse-introduction">
     <title>Introduction</title>
-    <para>
-      The mouse capplet in the <application>GNOME Control
-	Center</application> helps to configure properties of the mouse,
-      such as: whether you're left handed or right handed, sensitivity,
-      and mouse speed.
-    </para>
+
+    <para>The mouse capplet in the <application>GNOME Control
+    Center</application> helps to configure properties of the mouse. These
+    are:</para>
+
+    <itemizedlist>
+      <listitem>
+        <para>for the <guilabel>General</guilabel> tab: mouse acceleration,
+        mouse sensitivity, double-click timout, drag and drop treshold,
+        pointer location and left handed or right handed mouse usage</para>
+      </listitem>
+
+      <listitem>
+        <para>for the <guilabel>Accessibility</guilabel> tab: simulated
+        secondary click and dwell click</para>
+      </listitem>
+    </itemizedlist>
   </sect2>
-  <sect2 id="config-mouse-buttons">
-    <title>The Buttons Tab</title>
-    <para>
-      The buttons tab controls properties for the mouse buttons.
-    </para>      
-    <sect3 id="config-mouse-buttons-orientation">
+
+  <sect2 id="config-mouse-general">
+    <title>The <guilabel>General</guilabel> Tab</title>
+
+    <para>The <guilabel>General</guilabel> tab offers the commonly used
+    settings of the mouse.</para>
+
+    <sect3 id="config-mouse-general-orientation">
       <title>Mouse Orientation</title>
-      <para>
-	A mouse behaves differently based on whether the user is right
-	or left handed.  If they're right handed, the left button is the
-	action button, while the right button is the menu button.  The
-	mouse also typically sits on the right hand side of the desk.
-	If the user is left handed, they use the right button as the
-	action button, while the left button is the menu button.  It
-	also sits on the left hand of the desk.
-      </para>
-      <para>
-	To configure the hand orientation, select the
-	<guibutton>Left-handed mouse</guibutton> button.  If you're
-	right handed, deselect that button.  Press
-	<guibutton>Apply</guibutton> to apply your changes.
-      </para>
+
+      <para>A user controls the mouse differently based on him being right or
+      left handed.</para>
+
+      <para>If he is right handed, the mouse typically sits on the right hand
+      side of the desk. The primary button (action button) is on the left of
+      the mouse, so that he can press it with his index finger, while the
+      secondary button (menu button) is on the right. </para>
+
+      <para>However, if he is left handed, the mouse sits on the left hand
+      side of the desk. Consequently, in order to allow him to operate the
+      primary button with his index finger of his left hand, the primary and
+      the secondary button of the mouse have to be swapped. </para>
+
+      <para>That is the purpose of the <guilabel>Mouse Orientation</guilabel>
+      setting: select the <guibutton>Right-handed</guibutton> button if you
+      are right handed, or the <guibutton>Left-handed</guibutton> button if
+      you are left handed. When using the setting appropriate to him, the user
+      has the primary button under his index finger. </para>
     </sect3>
-    <sect3 id="config-mouse-buttons-dclick">
-      <title>Double-click Delay</title>
-      <para>
-	Double-clicking speed can be configured, to let you set how
-	fast you want to double-click.  This can be good for disabled
-	people who can't click fast.
-      </para>
-      <para>
-	Select the delay you wish to use on the slider.  The more
-	right it is, the longer the delay allowed.
-      </para>
-      <para>
-	You can test the speed by double-clicking on the cake at
-	right.  The candle will light on fire if it detected a
-	double-click.
-      </para>
+
+    <sect3 id="config-mouse-general-cursors-locate">
+      <title>Locate Pointer</title>
+
+      <para>Sometimes, the user loses where the pointer is. If he selects the
+      <guibutton>Show position of pointer when the Control key is
+      pressed</guibutton>, he can make the pointer reappear by pressing the
+      control key.</para>
     </sect3>
-  </sect2>
-  <sect2 id="config-mouse-cursors">
-    <title>The Mouse Cursors Tab</title>
-    <para>
-      Cursors are the part on the desktop that represents where the
-      mouse is.  The cursor can be changed for easier use.
-    </para>
-    <sect3 id="config-mouse-cursors-theme">
-      <title>Cursor Themes</title>
-      <para>
-	<application>Gnome</application>'s mouse cursors can be
-	configured to look different.  For example, if you have a dark
-	desktop, you may want to use the white cursor.
-      </para>
-      <para>
-	To select a theme, simply click the theme you wish to use and
-	click <guibutton>Apply</guibutton>.  You will need to logout
-	for this change to occur.
-      </para>
+
+    <sect3 id="config-mouse-general-speed">
+      <title>Pointer Speed</title>
+
+      <para>Every user has different favorites regarding the relation between
+      the movement of the mouse and the movement of the pointer. In order to
+      tune it to his taste, he can use the <guilabel>Acceleration</guilabel>
+      and the <guilabel>Sensitivity</guilabel> settings: </para>
+
+      <itemizedlist>
+        <listitem>
+          <para><guilabel>Acceleration</guilabel>: it sets the linear factor
+          between mouse movement and pointer movement</para>
+        </listitem>
+
+        <listitem>
+          <para><guilabel>Sensitivity</guilabel>: it sets the threshold speed
+          at which the mouse will start accelerating</para>
+        </listitem>
+      </itemizedlist>
+
+      <para>For example, by setting the sensitivity to its lowest, the mouse
+      will move all the time with no acceleration adjustment; in this case,
+      there is a perfect mouse distance to pixel distance ratio.</para>
     </sect3>
-    <sect3 id="config-mouse-cursors-locate">
-      <title>Locating Cursors Option</title>
-      <para>
-	Sometimes, you'll lose where the cursor is.  If you select the
-	<guibutton>Show position of cursor when the Control key is
-	pressed</guibutton>, the cursor will be animated when you
-	press and release the control key.
-      </para>
-    </sect3>
-  </sect2>
-  <sect2 id="config-mouse-motion">
-    <title>The Motion Tab</title>
-    <para>
-      The mouse cursor can be set to move at different speeds and
-      sensitivities.  The following options are available for you to
-      edit:
-    </para>
-    <sect3 id="config-mouse-motion-speed">
-      <title>Speed</title>
-      <para>
-	The mouse pointer can move at different speeds across the
-	screen.  Everyone has their favorite speed, so the ability to
-	configure this is important.
-      </para>
-<!-- Figure out what acceleration and sensitivity is -->
-      <para>
-	To set your mouse speed, move the bar to either faster or slower
-	in the <guilabel>Mouse speed</guilabel> section.  Afterwards,
-	click <guibutton>Apply</guibutton> to test the speed.  Once you
-	select your desired speed, click <guibutton>Close</guibutton>.
-      </para>
-    </sect3>
-    <sect3 id="config-mouse-motion-dnd">
+
+    <sect3 id="config-mouse-general-dnd">
       <title>Drag and Drop</title>
-      <para>
-	Drag and drop is clicking an object, and dragging it to
-	another place on the screen, causing an event to occur.
-      </para>
-      <para>
-	You need to drag it a certain amount of distance before the
-	system will recognize it as a drag and drop operation.  To
-	configure how far to drag it, move the slider left or right.
-      </para>
+
+      <para>Drag and drop is clicking an object, and dragging it to another
+      place on the screen, causing an event to occur.</para>
+
+      <para>You need to drag it a certain amount of distance before the system
+      will recognize it as a drag and drop operation. To configure how far to
+      drag it, move the <guilabel>Treshold</guilabel> slider left or
+      right.</para>
+    </sect3>
+
+    <sect3 id="config-mouse-general-double-click">
+      <title>Double-click Delay</title>
+
+      <para>When a user performs two clicks with the primary button, the
+      system considers them as a double-click or as two single clicks
+      depending on the delay that has elapsed between the two clicks. </para>
+
+      <para>With the <guilabel>Timeout</guilabel> slider, the user can set the
+      maximum delay that can elapse between the two clicks for them to be
+      still considered as a double-click. If the delay between the two clicks
+      is greater than the maximum delay that has been set, the two clicks are
+      considered as two single clicks instead of a double click.</para>
+
+      <para>Consequently: the shorter the timeout, the less time can elapse
+      between the two clicks of a double-click.</para>
+
+      <para>The user can test the timeout that he has set by clicking on the
+      light bulb, that will light on, if a double-click is detected.</para>
+    </sect3>
+  </sect2>
+
+  <sect2>
+    <title id="config-mouse-a11y">The Accessibility Tab</title>
+
+    <para>The <guilabel>Accessibility</guilabel> tab brings additional
+    functions to the mouse. It allows the the user to perform a secondary
+    click by using the primary button; it also allows him to perform all the
+    different click types without using any hardware button.</para>
+
+    <sect3 id="config-mouse-a11y-simulated-secondary-click">
+      <title>Simulated Secondary Click</title>
+
+      <para>There are users that can use only one mouse button. By activating
+      the <guilabel>Simulated Secondary Click</guilabel>, these users have a
+      direct way to perform secondary clicks with their unique mouse button.
+      In fact, the secondary click occurs automatically when the user keeps
+      the primary button pressed for a determined delay without moving the
+      mouse.</para>
+
+      <para>The <guilabel>Simulated Secondary Click</guilabel> also offers a
+      slider named <guilabel>Delay</guilabel> to configure how long the user
+      has to press the button and keep the mouse motionless, before the
+      secondary click is automatically performed.</para>
+    </sect3>
+
+    <sect3 id="config-mouse-a11y-dwell">
+      <title>Dwell Click</title>
+
+      <para>There are users that cannot use any hardware button. By activating
+      the <guilabel>Dwell Click</guilabel>, they can have the mouse perform
+      the various clicks without pressing any mousebutton. The click types
+      that can be performed are: single click, double-click, drag click and
+      secondary click.</para>
+
+      <para>To make the mouse perform the clicks without a mousebutton being
+      pressed, the user has to put a mark in the box named <guilabel>Initiate
+      click when stopping pointer movement</guilabel>. How the click is
+      completed and how the click type is chosen depends on what dwell mode
+      the user is using. The two available modes are: </para>
+
+      <itemizedlist>
+        <listitem>
+          <para>automatic click completion with click type chosen
+          beforehand</para>
+        </listitem>
+
+        <listitem>
+          <para>click completion and click type choice by a mouse gesture
+          after click initiation</para>
+        </listitem>
+      </itemizedlist>
+
+      <para>With the <guilabel>Delay</guilabel> slider, the user can configure
+      how long the pointer has to be motionless for the click to be
+      initiated.</para>
+
+      <para>For people that have trouble to keep the mouse motionless, there
+      is the <guilabel>Motion Treshold</guilabel> slider. When the slider is
+      set towards low, even little mouse movements are considered; however, by
+      setting a higher treshold, the mouse has to traverse a bigger distance
+      before it is considered as moving.</para>
+
+      <para>As said above, the user can choose between two modes for the click
+      type choice and click completion:</para>
+
+      <sect4 id="config-mouse-accessibility-dwell-ctw">
+        <title>Dwell Click With Automatic Click Completion And Click Type
+        Choice Beforehand</title>
+
+        <para>This mode is active when the user selects <guilabel>Choose type
+        of click beforehand</guilabel>. In fact, after the mouse has been
+        motionless for the above predefined delay, the system will
+        automatically perform the click type that is selected in the Click
+        Type Window. </para>
+
+        <para>After the click has occurred, the single click type will be
+        automatically restored. In order to choose another click type, the
+        user has to perform an automatic click on the
+        <guibutton>button</guibutton> in the Click Type Window that
+        corresponds to its click type choice.</para>
+
+        <para>To make the Click Type Window appear on the screen, the user has
+        to put a mark into the checkbox named <guilabel>Show click type
+        window</guilabel>. Some users might prefer to use the <guilabel>Dwell
+        Click panel applet</guilabel> instead of the Click Type Window. The
+        advantage of the panel applet is that it does not cover any open
+        window on the desktop.</para>
+      </sect4>
+
+      <sect4 id="config-mouse-accessibility-dwell-gestures">
+        <title>Dwell Click With Click Type Choice And Click Completion By A
+        Mouse Gesture</title>
+
+        <para>This mode is used when the user selects <guilabel>Choose type of
+        click with mouse gestures</guilabel>. In fact, after the mouse has
+        been motionless for the above predefined delay, the shape of the
+        pointer will change for a little while:</para>
+
+        <itemizedlist>
+          <listitem>
+            <para>If the user moves the mouse while it is showing the
+            alternative shape, a click is performed and the pointer returns to
+            its normal shape. The type of click performed depends on the
+            direction of the movement of the mouse.</para>
+          </listitem>
+
+          <listitem>
+            <para>If the mouse stays motionless until the pointer returns to
+            its normal shape, the user can move the mouse without a click
+            being performed. The next dwell click can be performed when the
+            mouse stops moving again.</para>
+          </listitem>
+        </itemizedlist>
+
+        <para>The user also has the possibility to match click type with
+        movement direction by using the 4 <guimenu>popups</guimenu> available
+        under this mode.</para>
+      </sect4>
     </sect3>
   </sect2>
 </sect1>
