@@ -1,3 +1,9 @@
+2008-01-14  Denis Washington  <denisw@svn.gnome.org>
+
+	* C/config-mouse.xml:
+	Updated to reflect the changes to the mouse capplet, e.g. the new
+	Accessibility tab.
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
